
syntax = "proto3";

option go_package = "/serverpb";

package serverpb;

service Server {
  rpc NewClusterRegistration (NewClusterRegistrationRequest) returns (NewClusterRegistrationResponse) {}  
  rpc UpdateClusterRegistration (UpdateClusterRegistrationRequest) returns (UpdateClusterRegistrationResponse) {} 
  rpc DeleteClusterRegistration (DeleteClusterRegistrationRequest) returns (DeleteClusterRegistrationResponse) {}
  
  rpc GetClusters (GetClustersRequest) returns (GetClustersResponse) {}  
  rpc GetClusterApps (GetClusterAppsRequest) returns (GetClusterAppsResponse) {}
  rpc GetClusterAppLaunchConfigs (GetClusterAppLaunchConfigsRequest) returns (GetClusterAppLaunchConfigsResponse) {}
  rpc GetClusterApp (GetClusterAppRequest) returns (GetClusterAppResponse) {}

  rpc AddStoreApp (AddStoreAppRequest) returns (AddStoreAppResponse) {}
  rpc UpdateStoreApp (UpdateStoreAppRequest) returns (UpdateStoreAppRsponse){}
  rpc DeleteStoreApp (DeleteStoreAppRequest) returns (DeleteStoreAppResponse){}
  rpc GetStoreApp (GetStoreAppRequest) returns (GetStoreAppResponse) {}
  rpc GetStoreApps (GetStoreAppsRequest) returns (GetStoreAppsResponse) {}
}

enum StatusCode {
  OK = 0;
  INTERNRAL_ERROR = 1;
  INVALID_ARGUMENT = 2;
  NOT_FOUND = 3;
}

message NewClusterRegistrationRequest {
  string clusterName = 1;
  string agentEndpoint = 2;
  string clientKeyData = 3;
  string clientCertData = 4;
  string clientCAChainData = 5;
}

message NewClusterRegistrationResponse {
  StatusCode status = 1;
  string statusMessage = 2;
}

message UpdateClusterRegistrationRequest {
  string clusterName = 1;
  string agentEndpoint = 2;
  string clientKeyData = 3;
  string clientCertData = 4;
  string clientCAChainData = 5;
}

message UpdateClusterRegistrationResponse {
  StatusCode status = 1;
  string statusMessage = 2;
}

message DeleteClusterRegistrationRequest {
  string clusterName = 1;  
}

message DeleteClusterRegistrationResponse {
  StatusCode status = 1;
  string statusMessage = 2;
}

message GetClustersRequest {
}

message GetClustersResponse {
  StatusCode status = 1;
  string statusMessage = 2;
  repeated ClusterInfo data = 3; 
}

message GetClusterAppsRequest {
  string clusterName = 1; 
}

message GetClusterAppsResponse {
  StatusCode status = 1;
  string statusMessage = 2;
  repeated ClusterAppConfig appConfigs = 3; 
}

message GetClusterAppRequest {
  string clusterName = 1;
  string appReleaseName = 2;
}

message GetClusterAppResponse {
  StatusCode status = 1;
  string statusMessage = 2;
  ClusterAppConfig appConfig = 3; 
}

message GetClusterAppLaunchConfigsRequest {
  string clusterName = 1;
}

message GetClusterAppLaunchConfigsResponse {
  StatusCode status = 1;
  string statusMessage = 2;
  repeated AppLaunchConfig appLaunchConfig = 3;
}

message ClusterInfo {
  string clusterName = 1;
  string agentEndpoint = 2;
  repeated ClusterAttribute attributes = 3;
  repeated AppLaunchConfig appLaunchConfigs = 4;
}

message AppLaunchConfig {
  string releaseName = 1;
  string category = 2;
  string description = 3;
  bytes icon = 4;
  string launchURL = 5;
  string launchRedirectURL = 6;
}

message ClusterAttribute {
  string key = 1;
  string value = 2;  
}

message ClusterAppConfig {
  string releaseName = 1;
  string appName = 2;
  string version = 3;
  string category = 4;
  string description = 5;
  string chartName = 6;
  string repoName = 7;
  string repoURL = 8;
  string namespace = 9;
  bool createNamespace = 10;
  bool privilegedNamespace = 11;
  bytes icon = 12;
  string launchURL = 13;
  string launchRedirectURL = 14;
  string installStatus = 15;
  string runtimeStatus = 16;
}

message AddStoreAppRequest {
  StoreAppConfig appConfig = 1;
  StoreAppValues appValues = 2;
}

message AddStoreAppResponse {
  StatusCode status = 1;
  string statusMessage = 2;
}

message UpdateStoreAppRequest {
  StoreAppConfig appConfig = 1;
  StoreAppValues appValues = 2;
}

message UpdateStoreAppRsponse {
  StatusCode status = 1;
  string statusMessage = 2;
}

message DeleteStoreAppRequest {
  string appName = 1;
  string version = 2;
}

message DeleteStoreAppResponse {
  StatusCode status = 1;
  string statusMessage = 2;
}

message GetStoreAppRequest {
  string appName = 1;
  string version = 2;
}

message GetStoreAppResponse {
  StatusCode status = 1;
  string statusMessage = 2;
  StoreAppConfig appConfig = 3;
}

message GetStoreAppsRequest {
}

message GetStoreAppsResponse {
  StatusCode status = 1;
  string statusMessage = 2;
  repeated StoreAppConfig appConfigs = 3;
}

message StoreAppConfig {
  string releaseName = 1;
  string appName = 2;
  string version = 3;
  string category = 4;
  string description = 5;
  string chartName = 6;
  string repoName = 7;
  string repoURL = 8;
  string namespace = 9;
  bool createNamespace = 10;
  bool privilegedNamespace = 11;
  string icon = 12;
  string launchURL = 13;
  string launchRedirectURL = 14;
}

message StoreAppValues {
  string overrideValues = 1;
  string launchUIValues = 2;
}
